use of stream assertions